// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should render a default slider 1`] = `
<div
  className="slider"
>
  <label
    className="label"
    id="sliderLabel"
  >
    testLabel
  </label>
  <span
    className="min-label"
  >
    0
  </span>
  <input
    aria-labelledby="sliderLabel"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    className="input-range"
    defaultValue={50}
    disabled={false}
    max={100}
    min={0}
    onChange={[Function]}
    type="range"
  />
  <span
    className="max-label"
  >
    100
  </span>
</div>
`;

exports[`Slider should render a disabled slider 1`] = `
<div
  className="slider"
>
  <label
    className="label"
    id="sliderLabel"
  >
    testLabel
  </label>
  <span
    className="min-label"
  >
    0
  </span>
  <input
    aria-labelledby="sliderLabel"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    className="input-range"
    defaultValue={50}
    disabled={true}
    max={100}
    min={0}
    onChange={[Function]}
    type="range"
  />
  <span
    className="max-label"
  >
    100
  </span>
</div>
`;

exports[`Slider should render a slider with custom min and max labels 1`] = `
<div
  className="slider"
>
  <label
    className="label"
    id="sliderLabel"
  >
    testLabel
  </label>
  <span
    className="min-label"
  >
    testMinimumLabel
  </span>
  <input
    aria-labelledby="sliderLabel"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    className="input-range"
    defaultValue={50}
    disabled={false}
    max={100}
    min={0}
    onChange={[Function]}
    type="range"
  />
  <span
    className="max-label"
  >
    testMaximumLabel
  </span>
</div>
`;
